--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,31 @@ body {
     font-weight: 400;
     font-style: normal;
 }
+
+@media only screen and (max-width: 700px) {
+    .input-container {
+      width: 100%;
+      order: 2;
+    }
+    .last:last-child {
+      order: 1;
+    }
+  }
+
+  @media only screen and (max-width: 250px) {
+    .input-container {
+      display: none;
+    }
+}
+    
+  
+  @media only screen and (min-width: 769px) {
+    .input-container input {
+      width: 600px; 
+      
+    }
+  } 
+  
+  
+  
+  
